Implement the ask and notes screen. (#8)